Fix footer copyright margin and adjust footer list alignment

--- a/CSS_advanced/styles/18-style.css
+++ b/CSS_advanced/styles/18-style.css
@@ -158,11 +158,11 @@ ul.row {
     color: var(--nav-item-link-hover);
 }
 .footer-copyright {
-    margin: none;
+    margin: 0;
     font-size: var(--font-size-small);
     color: var(--text-color);
 }
-ul.footer {
+.footer ul {
     text-align: right;
 }
 .footer {
